# SeaCoreExplorer

./: CMakeLists.txt  README.md
cmake/: External-VTK.cmake  Superbuild.cmake
include/: MainWindow.h  QSeaCoreTableModel.h  SeaCore.h  csv_v3.h
src/: MainWindow.cxx  QSeaCoreTableModel.cxx  SeaCore.cxx  SeaCoreComparer.cxx  main.cxx
ui/: MainWindow.ui  SeaCoreExplorer.qrc
